fixed the securityconfig